--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"require": {
 		"php": "7.1.* || 7.2.* || 7.3.*",
 		"symfony/console": "~2.3 || 3.* || 4.*",
-		"nette/http": "2.4.*",
+		"nette/http": "2.3.* || 2.4.*",
 		"pd/version": "2.*",
 		"psr/log": "^1.0.1"
 	},
