--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
 	"name": "pd/css-dependencies-version",
 	"description": "Nástroj pro overzování závislostí v CSS souboru",
 	"require": {
-		"php": "7.1.* || 7.2.* || 7.3.*",
+		"php": "7.1.* || 7.2.* || 7.3.* || 7.4.*",
 		"symfony/console": "~2.3 || 3.* || 4.*",
 		"nette/http": "2.4.*",
-		"pd/version": "2.*",
+		"pd/version": "^2.0.6",
 		"psr/log": "^1.0.1"
 	},
 	"require-dev": {
