--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"php": "7.1.* || 7.2.* || 7.3.* || 7.4.*",
 		"symfony/console": "~2.3 || 3.* || 4.*",
 		"nette/http": "3.0.*",
-		"pd/version": ">= 3.0.0 <= 3.1.2",
+		"pd/version": ">= 3.1.2",
 		"psr/log": "^1.0.1",
 		"kdyby/console": "2.8.*@dev"
 	},
